# fsds_aws

./: .gitignore  Dockerfile  README.md  environment.yml  main.py  nonstandardcode.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
manifests/: housing-app-pod.yaml
notebooks/: data_drift_report.html  model_monitor.ipynb  model_monitoring.py  test_monitoring.ipynb
scripts/: ingest_data.py  model_monitoring.py  score.py  train.py
src/: ingest_data.py  logger.py  score.py  train.py
src/housing/: helper.py  ingest_data.py  logger.py  model_monitoring.py  score.py  train.py
tests/functional_tests/: test_ingest_data.py  test_logger.py  test_train.py
tests/unit_tests/: test_basic.py
