[project.paths]
test_data_path = data/processed/test
train_data_path = data/processed/train
stored_model_path = artifacts/model
download = data

[isort]
profile = black

[flake8]
max-line-length = 88
exclude = .venv
extend-ignore = F401, E402

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src